--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,16 +6,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go: [ '1.15', '1.16' ]
+        go: [ '1.19', '1.18' ]
     name: Go ${{ matrix.go }} test
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Install Go stable version
         if: matrix.go != 'tip'
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go }}
+          check-latest: true
       - name: Install Go tip
         if: matrix.go == 'tip'
         run: |
@@ -28,7 +29,7 @@ jobs:
       - name: Test
         run: go test -v -race ./...
       - name: Upload code coverage to codecov
-        if: matrix.go == '1.16'
+        if: matrix.go == '1.19'
         uses: codecov/codecov-action@v1
         with:
           file: ./coverage.out
